--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ proguard/
 
 # Log Files
 *.log
+
+# Android Studio
+.idea/workspace.xml
+.idea/libraries
+.idea/*.iws
+.idea/tasks.xml
+*.iml
+.DS_Store
